# ToDo_python

./: README.md  ToDo.py  pyproject.toml  run_console.sh  run_desktop.sh  start.sh
.github/workflows/: docker-build.yml
api/: .dockerignore  .gitignore  docker-compose.yml  dockerfile.backend  pyproject.toml
api/src/: data.json
api/src/api/: models.py  serializers.py  urls.py  views.py
api/src/api/tests/: test_models.py  test_views.py
api/src/myapi/: settings.py  urls.py
console/: .gitignore  ToDo.py  test.py
desktop/: .gitignore  main.py  main.spec  requirements.txt
desktop/models/: api_client.py  api_connection.py  state.py
desktop/tests/: test_main_window.py
desktop/ui/: main_window.py  styles.qss
docker/: docker-compose.yml
docker/backend/: dockerfile.backend
docker/console/: dockerfile.console
docker/desktop/: dockerfile.desktop
docker/web/: dockerfile.web
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/components/: GithubCallback.tsx  LoginComponent.tsx  TaskForm.tsx  TaskTable.tsx
web/src/hooks/: useTasks.ts
web/src/pages/: App.tsx  Login.tsx
web/src/router/: Routes.tsx
