[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "takojakos",email = "dziki.sledz@op.pl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyside6 (>=6.9.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
